# file_manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  file_utils.c  file_utils.h  main.c  ops.c  ops.h  path_utils.c  path_utils.h  qwert  result.txt
include/: constants.h  enums.h  types.h
include/include/: types.h
src/config/: config.c  config.h
src/core/: app.c  app.h  main.c
src/errors/: error.c  error.h
src/input/: input.c  input.h
src/operations/: clipboard.c  clipboard.h  file_ops.c  file_ops.h
src/ui/: dialog.c  dialog.h  ui.c  ui.h
src/utils/: path_utils.c  path_utils.h  string_utils.c  string_utils.h
